exports[`test should display tips with bad password 1`] = `
<div>
  <div
    style={
      Object {
        "float": "left",
        "width": 165,
      }
    }>
    <div
      className="fieldset">
      <label
        htmlFor="test">
        Password
      </label>
      <span
        className="required-field-asterisk">
         *
      </span>
      <div
        className="field">
        <input
          className="form-control"
          maxLength={50}
          name="test"
          onChange={[Function]}
          placeholder={undefined}
          style={Object {}}
          type="password"
          value="a" />
        <br />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "float": "left",
      }
    }>
    <ul
      className="unstyled">
      <li>
        Add number.
      </li>
      <li>
        Add special character.
      </li>
      <li>
        Password must be at least 
        5
         characters.
      </li>
    </ul>
  </div>
  <div
    style={
      Object {
        "clear": "both",
      }
    } />
</div>
`;

exports[`test should hide password quality by default 1`] = `
<div>
  <div
    style={
      Object {
        "float": "left",
        "width": 165,
      }
    }>
    <div
      className="fieldset">
      <label
        htmlFor="test">
        Password
      </label>
      <span
        className="required-field-asterisk">
         *
      </span>
      <div
        className="field">
        <input
          className="form-control"
          maxLength={50}
          name="test"
          onChange={[Function]}
          placeholder={undefined}
          style={Object {}}
          type="password"
          value="Uisi38#8iad" />
        <br />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "float": "left",
      }
    } />
  <div
    style={
      Object {
        "clear": "both",
      }
    } />
</div>
`;

exports[`test should hide password quality when enabled but no password is entered 1`] = `
<div>
  <div
    style={
      Object {
        "float": "left",
        "width": 165,
      }
    }>
    <div
      className="fieldset">
      <label
        htmlFor="test">
        Password
      </label>
      <span
        className="required-field-asterisk">
         *
      </span>
      <div
        className="field">
        <input
          className="form-control"
          maxLength={50}
          name="test"
          onChange={[Function]}
          placeholder={undefined}
          style={Object {}}
          type="password"
          value="" />
        <br />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "float": "left",
      }
    } />
  <div
    style={
      Object {
        "clear": "both",
      }
    } />
</div>
`;

exports[`test should show no tips with good password 1`] = `
<div>
  <div
    style={
      Object {
        "float": "left",
        "width": 165,
      }
    }>
    <div
      className="fieldset">
      <label
        htmlFor="test">
        Password
      </label>
      <span
        className="required-field-asterisk">
         *
      </span>
      <div
        className="field">
        <input
          className="form-control"
          maxLength={50}
          name="test"
          onChange={[Function]}
          placeholder={undefined}
          style={Object {}}
          type="password"
          value="Uisi38#8iad" />
        <br />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "float": "left",
      }
    }>
    <ul
      className="unstyled" />
  </div>
  <div
    style={
      Object {
        "clear": "both",
      }
    } />
</div>
`;

exports[`test should show password quality when enabled and a password is entered 1`] = `
<div>
  <div
    style={
      Object {
        "float": "left",
        "width": 165,
      }
    }>
    <div
      className="fieldset">
      <label
        htmlFor="test">
        Password
      </label>
      <span
        className="required-field-asterisk">
         *
      </span>
      <div
        className="field">
        <input
          className="form-control"
          maxLength={50}
          name="test"
          onChange={[Function]}
          placeholder={undefined}
          style={Object {}}
          type="password"
          value="Uisi38#8iad" />
        <br />
        <div
          className={undefined}>
          <div
            style={
              Object {
                "backgroundColor": "green",
                "height": 5,
                "width": 100,
              }
            } />
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "float": "left",
      }
    } />
  <div
    style={
      Object {
        "clear": "both",
      }
    } />
</div>
`;
